исправил ошибки с запуском